fix(demos): add scrollbar-gutter:stable to prevent CLS

--- a/v2/demo-vue/src/index.css
+++ b/v2/demo-vue/src/index.css
@@ -8,6 +8,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   margin: 0;
   padding: 0;
